--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		style="background-image: url('images/bg03.jpg');">
 		<div class="wsize1 bor1 bg1 p-b-45 p-l-15 p-r-15 respon1">
 			<div class="wrappic1">
-				<img src="images/icons/logo.jpg" alt="LOGO" data-aos="fade-up">
+				<img src="images/icons/logo.jpg" alt="LOGO" data-aos="fade-down">
 			</div>
 
 			<p class="txt-center m1-txt1 p-b-20">
@@ -107,18 +107,18 @@
 
 
 			<form class="flex-w flex-c-m contact100-form validate-form p-t-10">
-				<div class="wrap-input100 validate-input where1" data-validate="Email is required: ex@abc.xyz" data-aos="fade-right">
+				<div class="wrap-input100 validate-input where1" data-validate="Email is required: ex@abc.xyz">
 					<input class="s1-txt2 placeholder0 input100" type="text" name="email" placeholder="Your Email">
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="wrap-input100 validate-input where1" data-validate="[0-9]" data-aos="fade-up">
+				<div class="wrap-input100 validate-input where1" data-validate="[0-9]">
 					<input class="s1-txt2 placeholder0 input100" type="tel" name="phone" placeholder="Your Phone"
 						pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
 					<span class="focus-input100"></span>
 				</div>
 
-				<button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1" data-aos="fade-left">
+				<button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1">
 					Get Notified
 				</button>
 
